Add profile dashboard view with user information display
- Implemented a new profile.ejs view to display user account information.
- Included sections for user details such as full name, email, Auth0 ID, and locale.
- Added alerts for authentication status and a sign-out button.

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ PORT=4000
 TAKEADS_BASE_URL=https://api.takeads.com
 TAKEADS_PLATFORM_KEY=your_platform_key_here
 TAKEADS_PUBLIC_KEY=your_public_key_here
+
+# Auth0 configuration
+AUTH0_DOMAIN=your-tenant.auth0.com
+AUTH0_CLIENT_ID=your_client_id
+AUTH0_CLIENT_SECRET=your_client_secret
+AUTH0_SECRET=a_long_random_string_at_least_32_characters
+AUTH0_BASE_URL=http://localhost:4000
